--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,67 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html, body{
+    height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.nav-bar{
+    display: flex;
+    align-items: center;
+    background-color: rgb(55, 53, 53);
+    list-style: none;
+    width: auto;
+    padding: 0 16px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+.nav-bar-left{
+    display: flex;
+}
+
+.dropdown{
+    position: relative;
+    margin-right: 16px;
+}
+
+.drop-btn{
+    background-color: rgb(55, 53, 53);
+    color:  white;
+    padding:  16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: rgb(240, 240, 240);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px  rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content{
+    display: block;
+}
+
+.dropdown-content a{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover{
+    background-color: rgb(108, 108, 108);
+}
+
+.nav-bar-right{
+    margin-left: auto;
+    color: white;
+    font-size: 16px;
+}
