--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -7,6 +7,8 @@
                 <a routerLink="/demos/pipe">Pipe</a>
                 <a routerLink="/demos/directive">Directive</a>
                 <a routerLink="/demos/inputOutput">Input output</a>
+                <a routerLink="/demos/service">Services</a>
+                <a routerLink="/demos/formulaire">Formulaire</a>
             </div>
         </ul>
         <ul class="dropdown">
@@ -14,7 +16,8 @@
             <div class="dropdown-content">
                 <a routerLink="/exos/chronometre">Chronomètre</a>
                 <a routerLink="/exos/listeProduits">Liste produits</a>
-                <a routerLink="/exos/shopping">Shopping list</a>
+                <a routerLink="/exos/shopping">shopping list</a>
+                <a routerLink="/exos/shoppingService">shopping list service</a>
             </div>
         </ul>
     </div>
